# Moru

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  VS_2022.bat
cmake/: CompileOptions.cmake  Definitions.cmake  Dependencies.cmake  SourceLists.cmake  Tests.cmake
doc/: structures.md
include/component/: code.hpp  input.hpp  job.hpp
include/components/: code.hpp  input.hpp  job.hpp  workflow.hpp
include/io/: config.hpp
include/modules/: extractor.hpp  fftbm.hpp  generator.hpp  perturbator.hpp  sampler.hpp
include/util/: runner.hpp
include/utils/: config.hpp  job.hpp  runner.hpp  worker.hpp
src/: main.cpp
src/components/: code.cpp  input.cpp  workflow.cpp
src/io/: config.cpp
src/modules/: extractor.cpp  fftbm.cpp  generator.cpp  perturbator.cpp  sampler.cpp
src/utils/: config.cpp  job.cpp  runner.cpp  worker.cpp
test/: workflow.yml
